Enforce community-app architecture boundaries