@@ -2,13 +2,9 @@
 package com.nowcoder.community.content.controller;
 
 import com.nowcoder.community.common.web.Result;
+import com.nowcoder.community.content.api.model.PostSummaryView;
 import com.nowcoder.community.content.dto.PostSummaryResponse;
-import com.nowcoder.community.content.entity.Comment;
-import com.nowcoder.community.content.entity.DiscussPost;
 import com.nowcoder.community.content.service.BookmarkService;
-import com.nowcoder.community.content.service.CommentService;
-import com.nowcoder.community.content.service.TagService;
-import com.nowcoder.community.content.text.ContentTextCodec;
 import com.nowcoder.community.infra.security.auth.CurrentUser;
 import org.springframework.security.core.Authentication;
 import org.springframework.web.bind.annotation.DeleteMapping;
@@ -20,23 +16,15 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.util.List;
-import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestController
 @RequestMapping("/api")
 public class BookmarkController {
 
     private final BookmarkService bookmarkService;
-    private final CommentService commentService;
-    private final TagService tagService;
-    private final ContentTextCodec textCodec;
 
-    public BookmarkController(BookmarkService bookmarkService, CommentService commentService, TagService tagService, ContentTextCodec textCodec) {
+    public BookmarkController(BookmarkService bookmarkService) {
         this.bookmarkService = bookmarkService;
-        this.commentService = commentService;
-        this.tagService = tagService;
-        this.textCodec = textCodec;
     }
 
     @PutMapping("/posts/{postId}/bookmark")
@@ -62,44 +50,27 @@ public class BookmarkController {
         int userId = CurrentUser.requireUserId(authentication);
         int p = page == null ? 0 : Math.max(0, page);
         int s = size == null ? 10 : Math.min(50, Math.max(1, size));
-
-        List<DiscussPost> posts = bookmarkService.listBookmarkedPosts(userId, p, s);
-        List<Integer> postIds = posts.stream().map(DiscussPost::getId).toList();
-        Map<Integer, Comment> lastActivities = commentService.getLatestPostActivitiesByPostIds(postIds);
-        Map<Integer, List<String>> tagsByPostId = tagService.getTagsByPostIds(postIds);
-
-        List<PostSummaryResponse> items = posts.stream()
-                .map(post -> toSummary(post, lastActivities.get(post.getId()), tagsByPostId.get(post.getId())))
-                .collect(Collectors.toList());
-        return Result.ok(items);
+        return Result.ok(bookmarkService.listBookmarkedPostSummaries(userId, p, s).stream()
+                .map(BookmarkController::toPostSummaryResponse)
+                .toList());
     }
 
-    private PostSummaryResponse toSummary(DiscussPost post, Comment lastActivity, List<String> tags) {
-        PostSummaryResponse r = new PostSummaryResponse();
-        r.setId(post.getId());
-        r.setUserId(post.getUserId());
-        r.setCategoryId(post.getCategoryId());
-        r.setTags(tags == null ? List.of() : tags);
-        r.setTitle(textCodec.decodeOnRead(post.getTitle()));
-        r.setType(post.getType());
-        r.setStatus(post.getStatus());
-        r.setCreateTime(post.getCreateTime());
-        r.setCommentCount(post.getCommentCount());
-        r.setScore(post.getScore());
-
-        if (lastActivity != null && lastActivity.getUserId() > 0 && lastActivity.getCreateTime() != null) {
-            r.setLastReplyUserId(lastActivity.getUserId());
-            r.setLastReplyTime(lastActivity.getCreateTime());
-        }
-        if (r.getLastReplyTime() != null) {
-            if (r.getCreateTime() == null || r.getLastReplyTime().after(r.getCreateTime())) {
-                r.setLastActivityTime(r.getLastReplyTime());
-            } else {
-                r.setLastActivityTime(r.getCreateTime());
-            }
-        } else {
-            r.setLastActivityTime(r.getCreateTime());
-        }
-        return r;
+    private static PostSummaryResponse toPostSummaryResponse(PostSummaryView view) {
+        PostSummaryResponse response = new PostSummaryResponse();
+        response.setId(view.id());
+        response.setUserId(view.userId());
+        response.setTitle(view.title());
+        response.setType(view.type());
+        response.setStatus(view.status());
+        response.setCreateTime(view.createTime());
+        response.setCommentCount(view.commentCount());
+        response.setScore(view.score());
+        response.setCategoryId(view.categoryId());
+        response.setTags(view.tags());
+        response.setLastReplyUserId(view.lastReplyUserId());
+        response.setLastReplyTime(view.lastReplyTime());
+        response.setLastActivityTime(view.lastActivityTime());
+        response.setLastReplyPreview(view.lastReplyPreview());
+        return response;
     }
 }
